Removed Arabian fonts, added Lobster. Also changed link to GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </h1>
             <span class="text-muted discription">Meme it is a simple meme generator built using HTML5 Canvas library
                 Fabric.Js, and its allows you to manipulate text or images on chosen meme template.<br><a
-                    href="https://github.com/Abd3lwahab/meme-it" target="_blank" class="badge badge-dark"><i
+                    href="https://github.com/MasterGroosha/meme-generator-static" target="_blank" class="badge badge-dark"><i
                         class="fab fa-github mr-1"></i>GitHub</a></span>
         </div>
     </div>
@@ -99,12 +99,9 @@
                                     <option value="Arial Black">Arial Black</option>
                                     <option value="Comic Sans Ms">Comic Sans Ms</option>
                                     <option value="Impact">Impact</option>
+                                    <option value="Lobster">Lobster</option>
                                     <option value="Times New Roman">Times New Roman</option>
                                     <option value="Trebuchet MS">Trebuchet MS</option>
-                                </optgroup>
-                                <optgroup label="Arabic">
-                                    <option value="Bahij Myriad Arabic Bold">Bahij Myriad Arabic</option>
-                                    <option value="Hacen Liner XXL">Hacen Liner XXL</option>
                                 </optgroup>
                             </select>
                         </div>
