Feature: copy current image to clipboard

--- a/index.html
+++ b/index.html
@@ -196,8 +196,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="mb-4 mt-3">
-                    <button class="btn btn-success" id="generate-meme">Generate Meme</button>
+                <div class="form-group form-row add-btns pb-3">
+                    <div class="col-auto">
+                        <button class="btn btn-success" id="generate-meme">Download meme</button>
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-success" id="copy-meme">Copy to clipboard</button>
+                    </div>
                 </div>
             </div>
         </div>
